[package]
name = "parameter-store-executor"
version = "0.4.2"
edition = "2021"
authors = ["Johan Stenqvist <johan@stenqvist.net>"]

[[bin]]
name = "pse"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.5.25", features = ["cargo"] }
tokio = { version = "1.43.0", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ssm = { version = "1" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]
