[package]
name = "parameter-store-executor"
version = "0.4.5"
edition = "2021"
authors = ["Johan Stenqvist <johan@stenqvist.net>"]

[[bin]]
name = "pse"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.5.39", features = ["cargo"] }
tokio = { version = "1.45.1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ssm = { version = "1" }

[target.arm-unknown-linux-musleabihf.dependencies]
aws-lc-rs = { version = "*", features = ["bindgen"] }

[target.armv7-unknown-linux-musleabihf.dependencies]
aws-lc-rs = { version = "*", features = ["bindgen"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]
